syntax = "proto3";
package Base;
// Result
enum ResultType{    
    Invalid = 0;
    Succeed = 1;
    Error = 2;
    Warning = 3;
    Retry = 4;
    Ignore = 5;
}

enum PRIORITY_LEVEL{
    HEIGHT_LEVEL=0;
    NORMAL_LEVEL=1;
    LOW_LEVEL=2;
}

message DataPackage
{
    enum PackageType{
        NormalPackage=0;
        EventPackage=1;
    }
    PackageType Type = 1;
    enum StatusType{
        Request=0;
        Response=1;
    }
    StatusType Status=2;
    // In request pacakge, value is function id.
    // In event package, value is event id
    int32 Function = 3;
    // 优先级
    int32 Priority = 4;
    // 流水号
    fixed64 ID = 5;
    // 发送者的唯一标识符
    fixed64 Sender = 6;
    // 结果代码
    ResultType Result = 7;
    message DataItem
    {
        fixed32 Hash=1;
        bytes Data=2;
    }
    // 消息内容
    DataItem Content = 8;
    // 扩展数据，只在FileCenter发送文件时使用。一旦设置了这个字段则认为该包是BigPackage，直接进入队列而不是直接发送
    DataItem Extend = 9;
    // 保留的结构，仅在程序内部使用，而不应该作为传输项目。发送之前首先清除这部分数据
    message ReservedMessage
    {
        // SessionID. 内部使用。
        fixed64 SessionID=1;
        // Timespan. Used for internal.
        repeated int64 Clocks=2;
    }
    ReservedMessage Reserved=10;
}
